---
source: tests/mod.rs
expression: "edn_parse(\"{1 nil true -4.2 \\\"hello world\\\" :value}\").unwrap().cst"
---
edn [0..38]
    map [0..38]
        LBrace "{" [0..1]
        member [1..6]
            literal [1..2]
                Number "1" [1..2]
            Whitespace " " [2..3]
            literal [3..6]
                Null "nil" [3..6]
        Whitespace " " [6..7]
        member [7..16]
            literal [7..11]
                True "true" [7..11]
            Whitespace " " [11..12]
            literal [12..16]
                Number "-4.2" [12..16]
        Whitespace " " [16..17]
        member [17..37]
            literal [17..30]
                String "\"hello world\"" [17..30]
            Whitespace " " [30..31]
            composed [31..37]
                keyword [31..37]
                    Colon ":" [31..32]
                    Name "value" [32..37]
        RBrace "}" [37..38]
